# observer

./: Cargo.toml  README.md  config.yaml  preview_template.html
src/: cli.rs  gui.rs  lib.rs  main.rs  observer.rs  server.rs  settings.rs
src/server/: preview_template.html  startup.rs
src/server/routes/: mod.rs
src/server/routes/preview/: get.rs  mod.rs
src/server/routes/update/: get.rs  mod.rs
