[package]
name = "observer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-web-lab = "0.18"
tokio = "1"
config = "0.13"
gtk = { version = "0.5", package = "gtk4" }
clap = { version = "3", features = ["derive"] }
headless_chrome = "1"
chrono = "0.4"
serde = "1"
anyhow = "1"
validator = "0.16.0"
crossbeam-channel = "0.5"